-- 2023.10.24 - V1.3.4

- refactor: Optimise gamerule based functions (#39)
- fix: Visual bugs (#43)
- fix: Disconnect lag spike (#46)
- fix: Bots being loaded into DB rarely (#45)
- fix: Data load lag spikes
- fix: 161 Segmentation fault

- -- 2023.10.21 - V1.3.3

- feat: Last seen value to statistics (#37)
- fix: Retake bomb plant incompatibility bug (#31,#25)
- fix: Toplist rank colors (#32, #34)
- fix: Possible reference problems

-- 2023.10.20 - V1.3.2

- refactor: Optimise EventRoundEnd
- fix: Headshot not recorded (#23)
- fix: Some more table prefix fixes
- fix: Rank top indicates wrong rank colors (#29)
- fix: Targeting problems (spotted by @skaen)

-- 2023.10.17 - V1.3.1

- Added rank colors to toplist (#22)
- Fixed loading bug with no config file existing
- Fixed debug log crash on startup (#21)
- Fixed config file versioning

-- 2023.10.13 - V1.3.0

- Added customization option to rank scoreboard tags
- Added save mechanism toplist to show actual data for all online players
- Added full debug log for the code to let you guys find bugs easier
- Added option to print summary of point changes in round ends
- Fixed multiple harmless error log for dictionary
- Fixed several problematic solution

-- 2023.10.13 - V1.2.0

- Added max rank and current rank id to !rank
- Added player count to toplist
- Upgraded save mechanism
- Upgraded data storing mechanism
- Upgraded point setter mechanism
- Fixed missing VIP multiplier sections
- Fixed several minor bug
- Cleaned and refactored the full code